force-app/main/default/objects/Credit_Report__c/Credit_Report__c.object-meta.xml
<CustomObject>
    <label>Credit Report</label>
    <nameField>
        <displayFormat>CR - {0000000000}</displayFormat>
        <label>Credit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>