force-app/main/default/objects/Credit_Report__c/fields/BureauHitStatus__c.field-meta.xml
<CustomField>
    <fullName>BureauHitStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bureau Hit Status</label>
    <type>Checkbox</type>
</CustomField>