force-app/main/default/objects/Credit_Report__c/fields/ConsumerDateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>ConsumerDateOfBirth__c</fullName>
    <label>ConsumerDateOfBirth</label>
    <type>Date</type>
</CustomField>