force-app/main/default/objects/Credit_Report__c/fields/Credit_Bureau_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Bureau_Name__c</fullName>
    <label>Credit Bureau Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>