force-app/main/default/objects/Credit_Report__c/fields/Credit_Report_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Attachment__c</fullName>
    <label>Credit Report Attachment</label>
    <type>Url</type>
</CustomField>