force-app/main/default/objects/Credit_Report__c/fields/Credit_Repository__c.field-meta.xml
<CustomField>
    <fullName>Credit_Repository__c</fullName>
    <label>Credit Repository</label>
    <length>255</length>
    <type>Text</type>
</CustomField>