force-app/main/default/objects/Credit_Report__c/fields/CreditRatingCodeType__c.field-meta.xml
<CustomField>
    <fullName>CreditRatingCodeType__c</fullName>
    <label>Credit Rating Code Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>