force-app/main/default/objects/Credit_Report__c/fields/CreditReportFirstIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>CreditReportFirstIssuedDate__c</fullName>
    <label>CreditReportFirstIssuedDate</label>
    <type>Date</type>
</CustomField>