force-app/main/default/objects/Credit_Report__c/fields/CreditReportIdentifier__c.field-meta.xml
<CustomField>
    <fullName>CreditReportIdentifier__c</fullName>
    <label>Credit Report Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>