force-app/main/default/objects/Credit_Report__c/fields/CreditReportLastUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreditReportLastUpdatedDate__c</fullName>
    <label>CreditReportLastUpdatedDate</label>
    <type>Date</type>
</CustomField>