force-app/main/default/objects/Credit_Report__c/fields/CreditReportMergeType__c.field-meta.xml
<CustomField>
    <fullName>CreditReportMergeType__c</fullName>
    <label>Credit Report Merge Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>