force-app/main/default/objects/Credit_Report__c/fields/CreditReportType__c.field-meta.xml
<CustomField>
    <fullName>CreditReportType__c</fullName>
    <label>Credit Report Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>