force-app/main/default/objects/Credit_Report__c/fields/Delinq30__c.field-meta.xml
<CustomField>
    <fullName>Delinq30__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delinq 30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>