force-app/main/default/objects/Credit_Report__c/fields/Delinq60__c.field-meta.xml
<CustomField>
    <fullName>Delinq60__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delinq 60</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>