force-app/main/default/objects/Credit_Report__c/fields/Delinq_90__c.field-meta.xml
<CustomField>
    <fullName>Delinq_90__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delinq 90</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>