force-app/main/default/objects/Credit_Report__c/fields/DelinquencyCountersDerogatory__c.field-meta.xml
<CustomField>
    <fullName>DelinquencyCountersDerogatory__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delinquency Counters Derogatory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>