force-app/main/default/objects/Credit_Report__c/fields/Has_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Has_Bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Bankruptcy</label>
    <type>Checkbox</type>
</CustomField>