force-app/main/default/objects/Credit_Report__c/fields/History_of_Mortgage_on_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>History_of_Mortgage_on_Credit_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History of Mortgage on Credit Report</label>
    <type>Checkbox</type>
</CustomField>