force-app/main/default/objects/Credit_Report__c/fields/Inq3Months__c.field-meta.xml
<CustomField>
    <fullName>Inq3Months__c</fullName>
    <label>Inquires in 3 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>