force-app/main/default/objects/Credit_Report__c/fields/Inquiries_Count__c.field-meta.xml
<CustomField>
    <fullName>Inquiries_Count__c</fullName>
    <label>Inquiries Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>