force-app/main/default/objects/Credit_Report__c/fields/Is_Security_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Is_Security_Freeze__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Security Freeze</label>
    <type>Checkbox</type>
</CustomField>