force-app/main/default/objects/Credit_Report__c/fields/Mortgage_Trades__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Trades__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Mortgage Trades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>