force-app/main/default/objects/Credit_Report__c/fields/MostRecentTradeDate__c.field-meta.xml
<CustomField>
    <fullName>MostRecentTradeDate__c</fullName>
    <label>Most Recent Trade Date</label>
    <type>Date</type>
</CustomField>