force-app/main/default/objects/Credit_Report__c/fields/Public_Record_Balance__c.field-meta.xml
<CustomField>
    <fullName>Public_Record_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Public Record Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>