force-app/main/default/objects/Credit_Report__c/fields/Public_Records_Count__c.field-meta.xml
<CustomField>
    <fullName>Public_Records_Count__c</fullName>
    <label>Public Records Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>