force-app/main/default/objects/Credit_Report__c/fields/Real_Estate_Balance__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Balance__c</fullName>
    <label>Real Estate Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>