force-app/main/default/objects/Credit_Report__c/fields/RealEstatePaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>RealEstatePaymentAmount__c</fullName>
    <label>Real Estate Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>