force-app/main/default/objects/Credit_Report__c/fields/SSN_Matches__c.field-meta.xml
<CustomField>
    <fullName>SSN_Matches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSN Matches</label>
    <type>Checkbox</type>
</CustomField>