force-app/main/default/objects/Credit_Report__c/fields/SSNIssueYear__c.field-meta.xml
<CustomField>
    <fullName>SSNIssueYear__c</fullName>
    <label>SSN Issue Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>