force-app/main/default/objects/Credit_Report__c/fields/Total_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Limit__c</fullName>
    <label>Total Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>