force-app/main/default/objects/Credit_Report__c/fields/Total_Number_of_Trade_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Trade_Lines__c</fullName>
    <label>Active Trades Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>