force-app/main/default/objects/Credit_Report__c/fields/Trades_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Trades_12_Months__c</fullName>
    <label>Trades 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>