force-app/main/default/objects/Credit_Report__c/fields/Trades_Or_Other_Count__c.field-meta.xml
<CustomField>
    <fullName>Trades_Or_Other_Count__c</fullName>
    <label>Trades Or Other Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>