force-app/main/default/objects/Credit_Report__c/fields/WasDelinquentOrDerogatoryCount__c.field-meta.xml
<CustomField>
    <fullName>WasDelinquentOrDerogatoryCount__c</fullName>
    <label>Was Delinquent Or Derogatory Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>